Fixed spacing

--- a/css/top-section.css
+++ b/css/top-section.css
@@ -32,30 +32,12 @@
 	font-family: "GT-Walsheim-Thin";
 	color: #ffffff;
 	font-size: 32pt;
-	margin-bottom: 6rem;
+	margin-bottom: 5rem;
 }
-
-/*.phone-img {
-	position: relative;
-	vertical-align: middle;
-}
-
-.phone-img {
-	padding: 0px;
-}
-
-.phone-img img {
-	width: 300px;
-	margin-top: 82px;
-}*/
 
 form {
 	margin-top: 3rem;
 	display: block;
-	/*width: 100%;*/
-	/*margin-left: 0 !important;
-	padding-left: 0 !important;
-	padding-right: 0 !important;*/
 	position: relative;
 	min-width: 341px;
 	text-align: center;
@@ -94,7 +76,6 @@ form {
 .input-group-button {
 	padding-top: 0;
 	padding-bottom: 0;
-	/*width: 10%;*/
 	height: 100%;
 }
 
